5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1646_2449.log
== TEST (2019-04-20 21:10:44) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e-b*f)%(a*e-b*d)
y = (a*f-c*d)%(a*e-b*d)
if(x==0 and y==0)
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if(x==0 and y==0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:10:45) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e-b*f)%(a*e-b*d)
y = (a*f-c*d)%(a*e-b*d)
if(x==0 and y==0)
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.120594
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 9
    if(x==0 and y==0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:10:52) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = (c*e-b*f)%(a*e-b*d)
y = (a*f-c*d)%(a*e-b*d)
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)%(a*e-b*d)
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:13:06) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:08) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.131137
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.196732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.334488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.55813
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.603828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.745402
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.612891
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.798622
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:11) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.371793
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:11) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.352299
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:11) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.411452
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:

-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:12) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.284179
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:

-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:12) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.430601
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:12) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.615759
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:12) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.480053
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:12) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.615727
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:12) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.693274
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:

-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:13) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.403076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:13) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.263045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:13) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.172824
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:14) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.545926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:14) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.60131
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:14) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.756349
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:

-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.292105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.399263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.64214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.432418
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.250206
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2449/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.511312
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.133975
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:19:15) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))%((a*e)-(b*d))
y = ((a*f)-(c*d))%((a*e)-(b*d))
if(x==0 and y==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.211023
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))%((a*e)-(b*d))
ZeroDivisionError: float modulo

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:25:53) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:26:36) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)=!0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if((a*e)-(b*d)=!0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 21:26:46) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:27:02) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.113045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:27:09) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.161287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:27:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.179221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:27:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.094873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 21:29:09) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.136819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-21 12:53:49) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.241669
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 12:56:33) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
if((a*e)-(b*d)!=0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
else:
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-21 12:56:45) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
if((a*e)-(b*d)!=0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
else:
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-21 12:57:03) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
if((a*e)-(b*d)!=0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
else:
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
	print("Nao tem solucao")
-- EXECUTION TIME:
0.131095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 13, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-21 12:57:21) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))
if((a*e)-(b*d)!=0):
	x = ((c*e)-(b*f))/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.134989
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
